<resources>
    <string name="app_name">LaserCube</string>

    <string name="home">home</string>
    <string name="camera">camera</string>
    <string name="photo">photo</string>
    <string name="drawing">draw</string>
    <string name="material">material</string>

    <string name="unknown_device">Unknown device</string>

    <string name="mtu_no_device_connected">未连接设备</string>

    <string name="scan_tips_location_service_disabled">Location service is disabled</string>
    <string name="scan_tips_no_location_permission">Scan BLE device need fine location permission</string>
    <string name="no_read_external_storage_permission">Loading local OAD files requires access to the phone\'s storage</string>
    <string name="to_grant_permission">Grant</string>
    <string name="to_enable">Enable</string>
    <string name="no_camera_permission">权限被禁止，无法打开相机</string>
    <string name="exit_app">再按一次退出程序</string>

    <!-- 扫描LE -->
    <string name="scan_connected">Connected</string>
    <string name="scan_disconnected">Disconnected</string>
    <string name="scan_connect_timeout">Connect timeout</string>
    <string name="scan_connection_error">Connection error</string>
    <string name="scan_bt_disabled">Bluetooth of your mobile phone is turned off</string>
    
    <string name="stop_work_dec">是否要停止雕刻？</string>
    <string name="pause_work_dec">是否要暂停雕刻？</string>

    <!-- 工作状态 -->
    <string name="working_title">工作状态</string>
    <string name="working_start">start</string>
    <string name="working_pause">pause</string>
    <string name="working_stop">stop</string>

    <!-- 雕刻预览 -->
    <string name="carving_preview">CarvingPreview</string>
    <string name="next">next</string>
    <string name="start_preview">startPreview</string>

    <!-- 上传 -->
    <string name="upload">上传</string>
    <string name="cancel_upload">取消传输</string>

    <!-- 设置 -->
    <string name="setting">设置</string>

    <!-- 图片处理 -->
    <string name="image_process">图片处理</string>

</resources>
