<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
   >

    <RelativeLayout
        android:layout_width="match_parent"
        android:background="@color/color_bg"
        android:layout_height="45dp">
        <TextView
            android:layout_width="wrap_content"
            android:text="@string/home"
            android:layout_centerInParent="true"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:layout_height="wrap_content" />
        <ImageView
            android:id="@+id/img_more"
            android:layout_width="wrap_content"
            android:layout_alignParentRight="true"
            android:src="@mipmap/img_more"
            android:layout_centerVertical="true"
            android:padding="12dp"
            android:layout_height="wrap_content" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:gravity="center">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/ll_camera"
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingTop="10dp"
                android:background="@drawable/shape_btn_index"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imgv_camera"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/img_camera" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:layout_marginTop="5dp"
                    android:text="@string/camera"
                    android:textSize="18sp"
                    />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_select_image"
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:layout_weight="1"
                android:layout_marginLeft="16dp"
                android:paddingTop="10dp"
                android:gravity="center"
                android:background="@drawable/shape_btn_index"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/img_select_image" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:layout_marginTop="5dp"
                    android:text="@string/photo"
                    android:textSize="18sp"
                    />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="13dp"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/ll_drawing"
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingTop="10dp"
                android:background="@drawable/shape_btn_index"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/img_drawing" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:layout_marginTop="5dp"
                    android:text="@string/drawing"
                    android:textSize="18sp"
                    />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_material"
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:layout_marginLeft="16dp"
                android:layout_weight="1"
                android:background="@drawable/shape_btn_index"
                android:gravity="center"
                android:paddingTop="10dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/img_material" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:layout_marginTop="5dp"
                    android:text="@string/material"
                    android:textSize="18sp"
                    />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
